src/components/schedule/Schedule.module.css
.tableContainer {
  z-index: 1;
  overflow-x: auto;
  width: 100%;
}

.tableContainer::-webkit-scrollbar {
  height: 20px;
}

.tableContainer::-webkit-scrollbar-thumb {
  background-color: #00a74a;
  border-radius: 5px;
}

.tableContainer::-webkit-scrollbar-track {
  background-color: #d2e4d7;
  border-radius: 5px;
}

.scheduleTable {
  box-shadow: 0 4px 12px 0px rgba(0, 0, 0, 0.2);
  border: 2px solid #00a74a;
  border-collapse: collapse;
  width: 100%;
  min-width: 700px;
  color: #00a74a;
  margin: 30px;
  z-index: 1;
  position: relative;
}

.scheduleTable tr {
  font-family: "Ropamix black italic", "Playfair Display";
  background-color: #fbf7e1;
}

.scheduleTable td {
  font-family: "Ropamix medium italic", "Playfair Display";
}

.scheduleTable td,
.scheduleTable th {
  border: 2px solid #c7dfcf;
  text-align: left;
  padding: 15px;
  font-size: 1.7rem;
}

.scheduleTable tr:nth-child(1) {
  background-color: #008000cf;
  color: white;
}

.scheduleTable tr:nth-child(2),
.scheduleTable tr:nth-child(4),
.scheduleTable tr:nth-child(6),
.scheduleTable tr:nth-child(8) {
  background-color: #d2e4d7;
}

.linkItem {
  text-decoration: none;
  transition: 0.3s;
  color: #00a74a;
}

.linkItem:hover {
  color: var(--blue);
  font-weight: bold;
}

.enrollButton {
  width: 120px;
  position: relative;
  z-index: 1;
  font-family: "Ropamix medium italic", "Playfair Display";
  text-decoration: none;
  display: block;
  text-align: center;
  padding: 0.5rem 1rem;
  background-color: #fbf7e1;
  color: #00a74a;
  font-size: 1.3rem;
  font-weight: bold;
  text-transform: uppercase;
  border-radius: 20px;
  border: 2px solid #00a74a;
  cursor: pointer;
  animation: fadeInFromBottom 1s ease-in-out;
  transition: all 0.3s;
}

.enrollButton:hover {
  color: #fbf7e1;
  background-color: #00a74a;
}

.enrollButton:focus {
  outline: none;
}

@media screen and (max-width: 768px) {
  .tableContainer {
    overflow-x: auto;
  }

  .tableContainer::-webkit-scrollbar {
    height: 10px;
  }

  .tableContainer::-webkit-scrollbar-thumb {
    background-color: #00a74a;
    border-radius: 5px;
  }

  .tableContainer::-webkit-scrollbar-track {
    background-color: #d2e4d7;
    border-radius: 5px;
  }

  .scheduleTable {
    margin: 0px;
  }

  .scheduleTable,
  .scheduleTable th,
  .scheduleTable td {
    font-size: 1.2rem;
    padding: 10px;
  }

  .enrollButton {
    width: 100px;
    font-size: 1rem;
  }
}

